--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "every-kakao-server",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "ts-node index.ts"
+  },
   "repository": "https://github.com/khu-suyong/every-kakao-server.git",
   "author": "Su-Yong <simssy2205@gmail.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "socket.io": "^2.3.0"
   },
