--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,9 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error"
+        ]
     }
 }
