--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Su-Yong <simssy2205@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "socket.io": "^2.3.0"
+    "dotenv": "^8.2.0",
+    "socket.io": "^2.3.0",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.7.0",
